--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE>
 <html>
-  <!-- Metadados -->
   <head>
-    <!-- Configurações básicas -->
     <meta charset="utf-8" />
-    <title>Mapa interativo - Rede IDEA</title>
-
-    <!-- Link para biblioteca leaflet -->
-    <link type="text/css" rel="stylesheet" href="plugins/leaflet/leaflet.css"/>
-    <script src="plugins/leaflet/leaflet.js"></script>
-    <!-- Link para a biblioteca do minimap -->
-    <link type="text/css" rel="stylesheet" href="plugins/minimap/src/Control.MiniMap.css"/>
-    <script src="plugins/minimap/src/Control.MiniMap.js"></script>
-
+    <title>Rede IDEA - Início</title>
     <!-- Link para arquivos base -->
     <link type="text/css" rel="stylesheet" href="style.css"/>
-    <script src="map.js"></script>
-
-    <!-- Adicionando as camadas de geojson -->
-    <script src="dados/ide.geojson"></script>
-    <script src="dados/portais.geojson"></script>
-    <script src="dados/bairros.geojson"></script>
-    <script src="dados/brasil.geojson"></script>
   </head>
   <body>
-    <div id="mapa"></div>
+    <header>
+      <ul>
+        <li><a href="index.html">Sobre a Rede</a></li>
+        <li><a href="map.html">Mapa IDEAs</a></li>
+        <li><a href="public.html">Publicações</a></li>
+        <li>Troque IDEA</li>
+        <li>Compartilhe sua IDEA</li>
+        <li>Crie uma IDEA</li>
+        <li>Internacional</li>
+      </ul>
+    </header>
+    <div class="sobre">
+      <h3>Rede IDEA</h3>
+      <h4></h4>
+    </div>
   </body>
 </html>
