--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
         <li>Internacional</li>
       </ul>
     </header>
-    <div class="sobre">
-      <h3>Rede IDEA</h3>
-      <h4></h4>
+    <div style="overflow:scroll">
+    <div class="grid">
+      <div class="sobre">
+        <h3>Rede IDEA</h3>
+        <p>Eu sou gabriele</p>
+        <h4>Participantes</h4>
+        <iframe width='1020' height='500' align="middle" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSGfgCHKSYfD8l4aQg0p_LQ3i6B0R-YMmLwpSCm4vFAMVH2SYbJbJ_zDmo7AeKc_94wyZ7DiuPv4Ppt/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+        <h4>Memorial de reuniões</h4>
+        <ul>
+          <li>GEONORDESTE (2017): A reunião foi realizada no dia 05/10/2017. <a href="https://docs.google.com/document/d/1hB_oLjqiYPCC71EZnaUGsnZY80WhxoOiAbfzygykB5Y/edit" target="_blank"><b>ACESSE A ATA AQUI.</b></a></li>
+          <li>CBC - Congresso Brasileiro de Cartografia (2017): A reunião foi realizada no dia 08/11/2017. <a href="https://docs.google.com/document/d/1jj8ZU2xFo3cA7R3kUZ5zpIQwXkUPwUv6s5C9LXnvOV8/edit" target="_blank"><b>ACESSE A ATA AQUI.</b></a></li>
+          <li>GEOINFO (2017): A reunião foi realizada no dia 04/12/2017. <a href="https://docs.google.com/document/d/1y6AhpAEJlsY0ToWfYDivsHdFMqNP-sLO8uWuNwuPkbE/edit" target="_blank"><b>ACESSE A ATA AQUI.</b></a></li>
+        </ul>
+      </div>
     </div>
+  </div>
   </body>
 </html>
