--- a/map.html
+++ b/map.html
@@ -35,9 +35,11 @@
         <li>Internacional</li>
       </ul>
     </header>
-    <div class="mapa">
-      <h3>Mapa das IDEA e Portais de Geoinformação no Brasil</h3>
-    </div>
-    <div id="mapa"></div>
+    <div class="grid">
+      <div class="mapa-text">
+        <h3>Mapa das IDEA e Portais de Geoinformação no Brasil</h3>
+      </div>
+      <div id="mapa"></div>
+  </div>
   </body>
 </html>
