--- a/public.html
+++ b/public.html
@@ -18,19 +18,21 @@
         <li>Internacional</li>
       </ul>
     </header>
-    <div class="publicacao">
-      <h3>Publicações</h3>
-      <ul>
-        <li>BRITO, P. L. ; SOUZA, F. A. ; CAMBOIM, S. P. ; GIANNOTTI, M. A.  <b>PRIMEIROS PASSOS PARA A IMPLEMENTAÇÃO DE UMA IDE UNIVERSITÁRIA.</b> In: V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014, Recife. Anais do V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014.</li>
-        <li>CAMBOIM, S. P.; BRANDALIZE, M.C.B. . <b>THE ROLE OF UNIVERSITIES IN THE BRAZILIAN NSDI CAPACITY BUILDING PLAN ? THE CASE OF THE OPEN GEOSPATIAL LABORATORY AT UFPR'.</b> In: 26th International Cartographic Conference, 2013, Dresden. 26th International Cartographic Conference Proceedings, 2013.</li>
-        <li>FRONZA, GIOVANI. <b>IDE acadêmica: construção de uma Infraestrutura de Dados Espaciais participativa.</b> 2016. Dissertação (Mestrado em Ciências Geodésicas) - Universidade Federal do Paraná, . Orientador: Silvana Philippi Camboim.</li>
-        <li>MACHADO, ADRIANA ALEXANDRIA. <b>IDE Acadêmica em universidades brasileiras: proposta para a Universidade Federal Do Paraná (UFPR).</b> 2016. Dissertação (Mestrado em Ciências Geodésicas) - Universidade Federal do Paraná, Coordenação de Aperfeiçoamento de Pessoal de Nível Superior. Orientador: Silvana Philippi Camboim.</li>
-        <li>DAVIS JR, C. A.; FONSECA, F. T.; CÂMARA, G.. <b>Infraestruturas de dados espaciais na integração entre ciência e comunidades para promover a sustentabilidade ambiental.</b> In: Workshop de Computação Aplicada à Gestão do Meio Ambiente e Recursos Naturais, 2009</li>
-        <li>GIANNOTTI, M. A.; QUINTANILHA, J. A.<b>Projeto de extensão: “Preservação do Acervo de Dados Espaciais da Universidade de São Paulo: Concepção, desenvolvimento e implementação de uma infraestrutura de dados espaciais da Universidade de São Paulo (IDE-USP)”.</b> São Paulo: USP, 2012.</li>
-        <li>OLIVEIRA, P. F. ; RAMOS, J. A. S. . <b>Arquitetura e desafios de uma Infraestrutura de Dados Espaciais para setores da Universidade do Estado do Rio de Janeiro..</b> In: Simpósio Brasileiro de Sensoriamento Remoto, 2013, Foz do Iguaçu, PR. Anais do 16o Simpósio Brasileiro de Sensoriamento Remoto, 2013. v. 1. p. 2525-2532</li>
-        <li>RAMOS, J. A. S. ; FERREIRA, C. E. G. . <b>Discussing the role of university in spatial data infrastructure construction: issues and challenges for UERJ-V-SDI. In: Pre-conference workshop on Spatial data infrastructures, standards, open source and open data for geospatial (SDI-Open 2015), 2015, Rio de Janeiro.</b> 27th International Cartographic Conference Pre-conference workshop on Spatial data infrastructures, standards, open source and open data for geospatial. Pretoria, South Africa: University of Pretoria, 2015. p. 24-28.</li>
-        <li>BRITO, Patricia Lustosa; SOUZA, F. A. ; FERNANDES, Vivian de Oliveira ; PEDREIRA JUNIOR, A. . <b>Divulgação e acesso aos produtos cartográficos produzidos por pesquisadores da UFBA rumo a infraestrutura universitária de dados espaciais.</b> Politécnica (Instituto Politécnico da Bahia), v. 8, p. 23-28, 2015.</li>
-      </ul>
+    <div class="grid">
+      <div class="publicacao">
+        <h3>Publicações</h3>
+        <ul>
+          <li>BRITO, P. L. ; SOUZA, F. A. ; CAMBOIM, S. P. ; GIANNOTTI, M. A.  <b><a href="https://www.academia.edu/35377490/PRIMEIROS_PASSOS_PARA_A_IMPLEMENTA%C3%87%C3%83O_DE_UMA_IDE_UNIVERSIT%C3%81RIA" target="_blank">PRIMEIROS PASSOS PARA A IMPLEMENTAÇÃO DE UMA IDE UNIVERSITÁRIA.</a></b> In: V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014, Recife. Anais do V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014.</li>
+          <li>CAMBOIM, S. P.; BRANDALIZE, M.C.B. . <b>THE ROLE OF UNIVERSITIES IN THE BRAZILIAN NSDI CAPACITY BUILDING PLAN ? THE CASE OF THE OPEN GEOSPATIAL LABORATORY AT UFPR'.</b> In: 26th International Cartographic Conference, 2013, Dresden. 26th International Cartographic Conference Proceedings, 2013.</li>
+          <li>FRONZA, GIOVANI. <b>IDE acadêmica: construção de uma Infraestrutura de Dados Espaciais participativa.</b> 2016. Dissertação (Mestrado em Ciências Geodésicas) - Universidade Federal do Paraná, . Orientador: Silvana Philippi Camboim.</li>
+          <li>MACHADO, ADRIANA ALEXANDRIA. <b>IDE Acadêmica em universidades brasileiras: proposta para a Universidade Federal Do Paraná (UFPR).</b> 2016. Dissertação (Mestrado em Ciências Geodésicas) - Universidade Federal do Paraná, Coordenação de Aperfeiçoamento de Pessoal de Nível Superior. Orientador: Silvana Philippi Camboim.</li>
+          <li>DAVIS JR, C. A.; FONSECA, F. T.; CÂMARA, G.. <b>Infraestruturas de dados espaciais na integração entre ciência e comunidades para promover a sustentabilidade ambiental.</b> In: Workshop de Computação Aplicada à Gestão do Meio Ambiente e Recursos Naturais, 2009</li>
+          <li>GIANNOTTI, M. A.; QUINTANILHA, J. A.<b>Projeto de extensão: “Preservação do Acervo de Dados Espaciais da Universidade de São Paulo: Concepção, desenvolvimento e implementação de uma infraestrutura de dados espaciais da Universidade de São Paulo (IDE-USP)”.</b> São Paulo: USP, 2012.</li>
+          <li>OLIVEIRA, P. F. ; RAMOS, J. A. S. . <b>Arquitetura e desafios de uma Infraestrutura de Dados Espaciais para setores da Universidade do Estado do Rio de Janeiro..</b> In: Simpósio Brasileiro de Sensoriamento Remoto, 2013, Foz do Iguaçu, PR. Anais do 16o Simpósio Brasileiro de Sensoriamento Remoto, 2013. v. 1. p. 2525-2532</li>
+          <li>RAMOS, J. A. S. ; FERREIRA, C. E. G. . <b>Discussing the role of university in spatial data infrastructure construction: issues and challenges for UERJ-V-SDI. In: Pre-conference workshop on Spatial data infrastructures, standards, open source and open data for geospatial (SDI-Open 2015), 2015, Rio de Janeiro.</b> 27th International Cartographic Conference Pre-conference workshop on Spatial data infrastructures, standards, open source and open data for geospatial. Pretoria, South Africa: University of Pretoria, 2015. p. 24-28.</li>
+          <li>BRITO, Patricia Lustosa; SOUZA, F. A. ; FERNANDES, Vivian de Oliveira ; PEDREIRA JUNIOR, A. . <b>Divulgação e acesso aos produtos cartográficos produzidos por pesquisadores da UFBA rumo a infraestrutura universitária de dados espaciais.</b> Politécnica (Instituto Politécnico da Bahia), v. 8, p. 23-28, 2015.</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
