--- a/inter.html
+++ b/inter.html
@@ -27,11 +27,11 @@
         <a href="http://digimap.edina.ac.uk/" target="_blank"><img src="images/digimap.png" width="80px" height="80px" /></a>
         <h4>Digimap (EDINA), Reino unido</h4>
         <p>O armazenamento e disponibilização de dados da Universidade de
-        Edimburgo é feito pela solução webmapa Digimap, que faz parte de um conjunto de serviços desenvolvidos por EDINA. Essa solução    desenvolve e disponibiliza um conjunto de serviços e experiências que beneficiam pesquisas e o ensino a nível nacional e internacional, é nas versões For Colleges, For Schools, MapStream e OpenStream, todas com acesso restrito.</p>
+        Edimburgo é feito pela solução webmapa Digimap, que faz parte de um conjunto de serviços desenvolvidos por EDINA. Essa solução desenvolve e disponibiliza um conjunto de serviços e experiências que beneficiam pesquisas e o ensino a nível nacional e internacional, é nas versões For Colleges, For Schools, MapStream e OpenStream, todas com acesso restrito.</p>
         <br/>
         <a href="http://geo1.scholarsportal.info/" target="_blank"><img src="images/ScholarsGeoPortal.png" width="150px" height="150px" /></a>
         <h4>Scholars GeoPortal, Canadá</h4>
-        <p></p>
+        <p>Esse portal é uma iniciativa do Conselho de Bibliotecas das Universidades de Ontáro, no Canadá, e foi lançado em 2012, com o intuito de possibilitar o acesso ao conjunto de dados espaciais produzidos nessas universidades. O acesso ao portal é exclusivo para usuários autorizados, que podem realizar pesquisas, descobertas e análises com relação as atividades de ensino e pesquisa das 21 universidades cadastradas.</p>
       </div>
     </div>
     <div class="footer">
