--- a/map.html
+++ b/map.html
@@ -57,23 +57,9 @@
               <label for="email">E-mail:</label>
               <input type="email" id="email" name="usuario_email" />
             </div>
-            <!-- <div>
-              <label for="prof">Ocupação:</label>
-              <input type="checkbox" name="opcao1" value="professor"> Professor (a)<br>
-              <input type="checkbox" name="opcao2" value="pesquisador"> Pesquisador (a)<br>
-              <input type="checkbox" name="opcao3" value="aluno-pos"> Estudante de Pós-Graduação<br>
-              <input type="checkbox" name="opcao4" value="aluno-grad"> Estudante de Graduação<br>
-            </div>
-            <div>
-              <label for="deseja">O que você deseja:</label>
-              <input type="checkbox" name="opcao1" value="professor"> Incluir nome na lista de pesquisadores de referência da REDE IDEA na sua instituição<br>
-              <input type="checkbox" name="opcao2" value="pesquisador"> Adicionar a IDE ou portal de geoinformação da sua instituição<br>
-              <input type="checkbox" name="opcao3" value="aluno-pos"> Excluir meu nome da lista<br>
-              <input type="checkbox" name="opcao4" value="aluno-grad"> Enviar um trabalho relacionado a temática <br>
-            </div> -->
             <div>
               <label for="msg">Sugestões ou comentários:</label>
-              <textarea id="msg"></textarea>
+              <textarea id="msg" name="msg"></textarea>
             </div>
             <div class="button">
               <button type="submit">Pronto, enviar! :)</button>
