--- a/crie_idea.html
+++ b/crie_idea.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Escape Velocity by HTML5 UP
 	html5up.net | @ajlkn
@@ -20,7 +20,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Crie uma idea</a></h1>
-							<p>A Universidade Federal do Paraná (UFPR) desenvolve sua IDEA por meio da plataforma <a href="http://geonode.org/" target="_blank">GEONODE</a></p>
+							<p>Primeiros passos para a criação de uma Infraestrutura de Dados Espaciais acadêmica</p>
 						</div>
 
 					<!-- Nav -->
@@ -45,19 +45,27 @@
 
 			<!-- Main -->
 				<div id="main" class="wrapper style2">
-					<div class="title">Tutoriais</div>
+					<div class="title"></div>
 					<div class="container">
 
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>A seguir estão apresentados alguns tutoriais relacionados ao Geonode que foram utilizados na implementação no IDEA UFPR<br class="mobile-hide" /></h2>
-										<p>Esses foram elaborados por alunos de iniciação científica da UFPR.</p>
+										<h2>Adesão à INDE<br class="mobile-hide" /></h2>
+										<p>Sendo um dos objetivos da INDE a integração entre os dados produzidos por instituições governamentais, a nível municipal, estadual e federal, é importante que o primeiro passo seja a adesão à INDE, ingressando no Diretório Brasileiro de Dados Geoespaciais como produtor ou provedor de dados geoespaciais.</p>
+										<p>Os produtores de dados geoespaciais do setor público podem aderir ao DBDG, ativando os seus respectivos Nós, conforme descrito no <a href="http://www.inde.gov.br/images/inde/Roteiro_adesao_DBDG_abril_2017_v4.pdf" target="_blank">documento disponibilizado pela INDE</a>. </p>
+									</header>
+									<header class="style1">
+										<h2>Software</h2>
+										<p>O software livre <a href="http://geonode.org/" target="_blank">GeoNode</a> é sistema de gerenciamento de conteúdo para dados geoespaciais em plataforma Web, tanto para o desenvolvimento de sistemas de informação geoespacial (SIG), quanto para implementação de infraestruturas de dados espaciais (IDE). Esse é o software usado pela Universidade Federal do Paraná para a implementação da <a href="http://www.idea.ufpr.br/" target="_blank">IDEA UFPR</a>.</p>
+									</header>
+									<header class="style1">
+										<h2>Tutoriais GeoNode</h2>
+										<p>Por ser um software livre, o GeoNode é um pouco complicado em alguns aspectos relacionados a implementação. Sendo assim, a seguir estão apresentados alguns tutoriais usados no desenvolvimento da IDEA UFPR, elaborados por alunos de iniciação científica na universidade. Além disso, a documentação do GeoNode também disponibiliza <a href="http://docs.geonode.org/en/latest/tutorials/index.html" target="_blank">tutoriais</a>. </p>
 									</header>
 								</article>
 							</div>
-
 					</div>
 				</div>
 
