--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Escape Velocity by HTML5 UP
 	html5up.net | @ajlkn
@@ -93,8 +93,8 @@
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon fa-check">EM BREVE: 1º SBIDE - 1º Simpósio Brasileiro de Infraestrutura de Dados Espaciais</h3>
-												<p>De 26 a 30 de Novembro de 2018.</p>
+												<h3 class="icon fa-check"><a href="https://inde.gov.br/simposio-10-anos/sbide-home.html" target="_blank"> 1º SBIDE - 1º Simpósio Brasileiro de Infraestrutura de Dados Espaciais</h3></a>
+												<p>Realizada no dia 28/11/2018. <a href="https://docs.google.com/document/d/16IQ_9xPzckO5ytpWcj9zMhBRHTBPU8JBLcgZPB_Do14/edit?usp=sharing" target="_blank"><b>ACESSE A ATA AQUI.</b></a></p>
 											</section>
 										</div>
 									</div>
