--- a/mapa.html
+++ b/mapa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Escape Velocity by HTML5 UP
 	html5up.net | @ajlkn
@@ -27,6 +27,8 @@
     <script src="dados/ide.geojson"></script>
     <script src="dados/portais.geojson"></script>
     <script src="dados/brasil.geojson"></script>
+	<script src="dados/nao-participantes-rede.geojson"></script>
+    <script src="dados/participantes-rede.geojson"></script>
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -67,7 +69,7 @@
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
-									<iframe src="teste_mapa.html" width="100%" height="500"></iframe>
+									<iframe src="frame_mapa.html" width="100%" height="500"></iframe>
 								</article>
 							</div>
 
