--- a/publica.html
+++ b/publica.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Escape Velocity by HTML5 UP
 	html5up.net | @ajlkn
@@ -54,7 +54,8 @@
 										<h2>Se você tem algum trabalho relacionado a IDE acadêmicas e deseja adicionar essa lista, preencha o formulário na aba Mapa IDEAs!<br class="mobile-hide" /></h2>
 									</header>
 									<ul>
-										<li>BRITO, P. L. ; SOUZA, F. A. ; CAMBOIM, S. P. ; GIANNOTTI, M. A.  <a href="https://www.academia.edu/35377490/PRIMEIROS_PASSOS_PARA_A_IMPLEMENTA%C3%87%C3%83O_DE_UMA_IDE_UNIVERSIT%C3%81RIA" target="_blank">PRIMEIROS PASSOS PARA A IMPLEMENTAÇÃO DE UMA IDE UNIVERSITÁRIA.</a> In: V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014, Recife. Anais do V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014.</li>
+										<li><a href="https://inde.gov.br/images/inde/ANAIS_1SBIDE.pdf" target="_blank"><b>ANAIS DO 1º SIMPÓSIO BRASILEIRO DE INFRAESTRUTURAS DE DADOS ESPACIAIS.</b></a></li>
+										<li>BRITO, P. L. ; SOUZA, F. A. ; CAMBOIM, S. P. ; GIANNOTTI, M. A.  <b><a href="https://www.academia.edu/35377490/PRIMEIROS_PASSOS_PARA_A_IMPLEMENTA%C3%87%C3%83O_DE_UMA_IDE_UNIVERSIT%C3%81RIA" target="_blank">PRIMEIROS PASSOS PARA A IMPLEMENTAÇÃO DE UMA IDE UNIVERSITÁRIA.</a></b> In: V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014, Recife. Anais do V Simpósio em Ciências Geodésicas e Tecnologias da Geoinformação - SIMGEO, 2014.</li>
 									  <li>CAMBOIM, S. P.; BRANDALIZE, M.C.B. . <b>THE ROLE OF UNIVERSITIES IN THE BRAZILIAN NSDI CAPACITY BUILDING PLAN ? THE CASE OF THE OPEN GEOSPATIAL LABORATORY AT UFPR'.</b> In: 26th International Cartographic Conference, 2013, Dresden. 26th International Cartographic Conference Proceedings, 2013.</li>
 									  <li>FRONZA, GIOVANI. <b><a href="https://drive.google.com/file/d/1dU9xMBR7aw7NCheloBiiTQL1J4FbXhpi/view" target="_blank">IDE acadêmica: construção de uma Infraestrutura de Dados Espaciais participativa.</a></b> 2016. Dissertação (Mestrado em Ciências Geodésicas) - Universidade Federal do Paraná, . Orientador: Silvana Philippi Camboim.</li>
 									  <li>MACHADO, ADRIANA ALEXANDRIA. <b><a href="https://acervodigital.ufpr.br/bitstream/handle/1884/50354/R%20-%20D%20-%20ADRIANA%20ALEXANDRIA%20MACHADO.pdf?sequence=1&isAllowed=y" target="_blank">IDE Acadêmica em universidades brasileiras: proposta para a Universidade Federal Do Paraná (UFPR).</a></b> 2016. Dissertação (Mestrado em Ciências Geodésicas) - Universidade Federal do Paraná, Coordenação de Aperfeiçoamento de Pessoal de Nível Superior. Orientador: Silvana Philippi Camboim.</li>
@@ -63,6 +64,7 @@
 									  <li>OLIVEIRA, P. F. ; RAMOS, J. A. S. . <b>Arquitetura e desafios de uma Infraestrutura de Dados Espaciais para setores da Universidade do Estado do Rio de Janeiro..</b> In: Simpósio Brasileiro de Sensoriamento Remoto, 2013, Foz do Iguaçu, PR. Anais do 16o Simpósio Brasileiro de Sensoriamento Remoto, 2013. v. 1. p. 2525-2532</li>
 									  <li>RAMOS, J. A. S. ; FERREIRA, C. E. G. . <b>Discussing the role of university in spatial data infrastructure construction: issues and challenges for UERJ-V-SDI. In: Pre-conference workshop on Spatial data infrastructures, standards, open source and open data for geospatial (SDI-Open 2015), 2015, Rio de Janeiro.</b> 27th International Cartographic Conference Pre-conference workshop on Spatial data infrastructures, standards, open source and open data for geospatial. Pretoria, South Africa: University of Pretoria, 2015. p. 24-28.</li>
 									  <li>BRITO, Patricia Lustosa; SOUZA, F. A. ; FERNANDES, Vivian de Oliveira ; PEDREIRA JUNIOR, A. . <b>Divulgação e acesso aos produtos cartográficos produzidos por pesquisadores da UFBA rumo a infraestrutura universitária de dados espaciais.</b> Politécnica (Instituto Politécnico da Bahia), v. 8, p. 23-28, 2015.</li>
+										<li>Revista TEMPO - TÉCNICA - TERRITÓRIO. <b><a href="http://periodicos.unb.br/index.php/ciga/issue/view/1905/showToc" target="_blank">Artigos relacionados a IDE Acadêmica.</a></b> v. 9, n. 2. 2018. </li>
 									</ul>
 								</article>
 							</div>
@@ -111,7 +113,7 @@
 					</div>
 				</div>
 			</section>
-			
+
 		</div>
 
 		<!-- Scripts -->
