--- a/mapa.html
+++ b/mapa.html
@@ -47,7 +47,7 @@
 							<li class="current"><a href="index.html">Sobre</a></li>
 							<li><a href="mapa.html">Mapa IDEAs</a></li>
 							<li><a href="publica.html">Publicações</a></li>
-							<li><a href="crie_idea.html">Crie uma IDEA</a></li>
+							<li><a href="crie.html">Crie uma IDEA</a></li>
 							<li>
 								<a href="#">Internacional</a>
 								<ul>
@@ -146,6 +146,11 @@
 										<div class="col-6 col-12-small">
 											<section>
 												<img src="images/logo_ufpr.png" width="90px" height="70px" alt=""/>
+											</section>
+										</div>
+										<div class="col-6 col-12-small">
+											<section>
+												<img src="images/logo_ufba.png" width="150px" height="90px" alt=""/>
 											</section>
 										</div>
 									</div>
